<resources>
    <string name="app_name">Pro Chat</string>
    <string name="app_logo">Official App logo</string>
    <!--Login and Sign Up Forms-->
    <string name="password_hint">Enter Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="login_btn">Login</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="sign_up_link">Click Here to Sign Up</string>
    <string name="login_link">Click Here to Sign In</string>
    <!--Common-->
    <string name="email_hint">Enter Email Address</string>
    <string name="full_names">Enter Full Names</string>
    <string name="phone_hint">Phone Number</string>
    <string name="username_hint">Enter Username</string>
    <!--Dashboard-->
    <string name="inv_manager">Inventory Manager</string>
    <string name="make_sale">Make A Sale</string>
    <string name="prefs">Preferences</string>
    <string name="customers">Customers</string>
    <string name="Suppliers">Suppliers</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <!--Customer-->
    <string name="lbl_customers">CUSTOMERS</string>
    <string name="add_cus">add customer</string>
    <string name="cus_hint">Tap on customer to view profile</string>
    <string name="no_cus">No Customers Found</string>
    <string name="update_cus">Update Customer Info</string>
    <string name="delete_cus">Delete Customer</string>
    <!--Supplier-->
    <string name="lbl_suppliers">SUPPLIERS</string>
    <string name="add_sup">add supplier</string>
    <string name="sup_hint">Tap on supplier to view profile</string>
    <string name="no_sup">No Suppliers Found</string>
    <string name="update_sup">Update Supplier Info</string>
    <string name="delete_sup">Delete Supplier</string>
    <!--Item-->
    <string name="lbl_items">INVENTORY</string>
    <string name="add_item">add item</string>
    <string name="item_hint">Tap on item to view details</string>
    <string name="no_item">No Items Found</string>
    <string name="update_item">Update Item Details</string>
    <string name="delete_item">Delete Item</string>
    <!--Inventory-->
    <string name="item_name_hint">Enter Item Name</string>
    <string name="item_qty">Quantity</string>
    <string name="item_bp">Buying price</string>
    <string name="item_sp">Selling price</string>
</resources>
